--- a/mobile/configs/Legend/config_Legend.json
+++ b/mobile/configs/Legend/config_Legend.json
@@ -3,5 +3,8 @@
     "arrangement": 0,
     "autoUpdate": true,
     "respectCurrentMapScale": true
-  }
+  },
+  "layerState": {},
+  "syncWithWebmap": false,
+  "showLegendForBasemap": false
 }
